[metadata]
name = baher_hasab
version = 1.1.0
author = Samuel Alene
author_email = smlalene@gmail.com
description = A python package for calculating Ethiopian holidays and fasting seasons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sam23121.github.io/baher_hasab
project_urls =
    docs = https://sam23121.github.io/baher_hasab/
    repository = https://github.com/sam23121/baher_hasab
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
